tests/src/frontend/expand/invalid/extension_class_adds_generics.sk
module X;

extension base class .X<T>

module end;

base class X
